# pygrog

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: q-and-a.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  test_build.yml  test_build_setuptools.yml  wheels.yml  wheels_cuda.yml  wheels_setuptools.yml
benchmark/: README.md  _micro_subspace.py  benchmark.py  calibrate_data.py  download_data.py  fast_binning_example.py  plot_benchmarks.py  run_benchmarks.py
benchmark/benchmark/results/: results_error.json
benchmark/results/: calibrate_log.txt  results.json  results_error.json  run_log_hot.txt  run_log_new.txt
benchmark/results_data_driven_smoke/: results.json
benchmark/results_pipeline_data_driven_smoke/: results.json
benchmark/results_pipeline_smoke/: results.json
cmake/: FindPybind11Extension.cmake  OptimizationFlags.cmake
csrc/cpu/: binning_wrapper.cpp  fast_binning_cpu.h  grog_interp.h  scatter_add.h  wrapper.cpp
csrc/torch/: grog_interp.cpp  grog_interp_cuda.cu  module.cpp  sparse_ops.cpp  sparse_ops_avx2.cpp  sparse_ops_avx512.cpp  sparse_ops_cpu_impl.inl  sparse_ops_cuda.cu  toep_psf.cpp  toep_psf_cuda.cu
docs/: Makefile  api.rst  build.md  cmake_build.md  conf.py  getting_started.rst  index.rst  install.md  installation_guide.md  requirements.txt  sg_execution_times.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  getting_started.html  index.html  install.html  objects.inv  search.html  searchindex.js  sg_execution_times.html  sphinx-reading-durations.json
docs/_build/html/.doctrees/: api.doctree  getting_started.doctree  install.doctree  sg_execution_times.doctree
docs/_build/html/.doctrees/__intersphinx_cache__/: mrinufft_objects.inv
docs/_build/html/.doctrees/api/: calib.doctree  gadgets.doctree  grog.doctree  interop.doctree  operators.doctree
docs/_build/html/.doctrees/explanations/: grappa.doctree  grog.doctree  index.doctree  model_extensions.doctree
docs/_build/html/.doctrees/misc/: code_of_conduct.doctree  contributors.doctree  development.doctree  license.doctree
docs/_build/html/_downloads/085115085feacaf30b1c12e68d8dbc78/: example07_interoperability.ipynb
docs/_build/html/_downloads/13fd31be3591b4f74185937317b3779d/: example03_gadgets.py
docs/_build/html/_downloads/1a4bc95c8757f1e73355a1701a841ceb/: example_basic_usage.py
docs/_build/html/_downloads/414a806e980e0413c48ba9390dabd32a/: example_gadgets.ipynb
docs/_build/html/_downloads/437637a9ad2a090d4361eaad30bb794c/: example_interop.ipynb
docs/_build/html/_downloads/44e8ca31fd79022609fd46deeeb84577/: example_basic_usage.ipynb
docs/_build/html/_downloads/52ab7a6be424c24b7f051cf6d649ca5e/: example_toeplitz.py
docs/_build/html/_downloads/57e43e785bf2fdbeed5f957fa2bb64e7/: example02_stacked.py
docs/_build/html/_downloads/5a487f9bfa88dbd85c4424d3bfadcab2/: example_solve.ipynb
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: api.rst  install.md  sg_execution_times.rst
docs/_build/html/_sources/api/: calib.rst  (+1 more)
docs/_build/html/api/: calib.html  gadgets.html  grog.html  interop.html  operators.html
docs/_build/html/explanations/: grappa.html  grog.html  index.html  model_extensions.html
docs/_build/html/misc/: code_of_conduct.html  contributors.html  development.html  license.html
docs/_templates/autosummary/: class.rst
docs/api/: gadgets.rst  grog.rst  index.rst  interop.rst
docs/binder/: environment.yml
docs/explanations/: grappa.md  grog.md  index.rst  model_extensions.md
docs/misc/: code_of_conduct.md  contributors.md  development.md
examples/: GALLERY_HEADER.rst  example01_basic_usage.py  example02_stacked.py  example03_gadgets.py  example04_calibration.py  example05_solvers.py  example06_toeplitz.py  example07_interoperability.py  example_basic_usage.py  example_gadgets.py  example_interop.py  example_toeplitz.py  example_utils.py  fast_binning_example.py
paper/: README.md
paper/scripts/: _common.py  build_all.py  fig_benchmarks.py  fig_brain_recon.py  fig_features.py  fig_interop.py  fig_mrf_qualitative.py  fig_orc.py  fig_package.mmd  fig_package.py  fig_solvers.py  fig_subspace.py  fig_toeplitz.py
plans/: pygrog_project_audit.md
scripts/: build_docs.sh  check_colab_preamble.py  install_build_deps.ps1  install_build_deps.sh  repair_wheel.py  run_benchmark_pipeline.py  verify_install.py
src/pygrog/: __init__.py  _sigpy.py  _utils.py  preprocess.py
src/pygrog/_base/: __init__.py  _fftc.py  _nufft.py
src/pygrog/_linop/: __init__.py  _cart_op.py  _noncart_op.py
src/pygrog/_optimize/: _irgnm.py  _irgnm_cg.py
src/pygrog/_sigpy/: __init__.py
src/pygrog/_solve/: __init__.py  _mixin.py  _polynomial.py  _solvers.py
src/pygrog/_toep/: __init__.py  _grog_toep.py  _orc_toep.py  _sub_toep.py  _toep.py  _toep_op.py
src/pygrog/calib/: __init__.py  _acr.py  _grappa.py  _grog.py  _nlinv.py  _svd.py
src/pygrog/calib/_nlinv/: _common.py  _nlinv.py
src/pygrog/gadgets/: __init__.py  _off_resonance.py  _subspace.py  _svd_extension.py
src/pygrog/grog/: __init__.py  _extended_grog.py  _grappa.py  _grog.py  _utils.py  grog_train.py
src/pygrog/interop/: __init__.py  _deepinverse.py  _mrinufft.py  _mrpro.py  _sigpy.py  _torch.py
src/pygrog/operator/: __init__.py  _fast_binning.py  _fast_binning_old.py  _masked_fft.py  _off_resonance.py  _sparse_fft.py  _sparse_fft_old.py  _subspace.py  _toeplitz.py  indexing.py
src/pygrog/utils/: __init__.py  _nlinv.py
tests/: conftest.py  test_batch_stack.py  test_fast_binning.py  test_gadgets.py  test_grog_interpolator.py  test_interop.py  test_interop_adapters.py  test_masked_fft.py  test_orc_gridded.py  test_solve.py  test_sparse_fft.py  test_toeplitz.py  test_toeplitz_kernels.py  test_utils.py
tests/operators/: test_index.py
tests/train/: conftest.py  test_extended_grog.py  test_grog.py
(+32 files in other folders)
