[build-system]
requires = [
    "scikit-build-core>=0.9",
    "setuptools-scm>=8",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "pygrog"
description = "An interoperable GROG package to accelerate Non-Cartesian MR reconstructions."
readme = "README.md"

requires-python = ">=3.10"
dynamic = ["version"]

license = "MIT"
keywords = ["mri", "reconstruction", "non-cartesian", "parallel-imaging"]

authors = [
  {name = "Matteo Cencini", email = "matteo.cencini@gmail.com" } # Optional
]

# Classifiers help users find your project by categorizing it.
classifiers = [  # Optional
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11", 
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=2.0",
    "scipy",
    "torch>=2.0",
    "mri-nufft",
    "finufft",
    "pytorch-finufft",
]

[project.optional-dependencies]
cuda = [
    "cufinufft; platform_system == 'Linux'",
]
dev-cpu = [
    # style / linting
    "ruff",
    "pre-commit",
    # testing
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-sugar",
    "pytest-cases",
    "coverage",
    "codecov",
    # documentation
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-gallery",
    "myst-parser",
    "matplotlib",
    # examples / non-cartesian references
    "zenodo-get",
    "psutil",
    "brainweb-dl",
    "scikit-image",
    # interop
    "mrpro",
    "sigpy",
    "deepinv",
]
dev-cu12 = [
    "pygrog[dev-cpu,cuda]",
    "cupy-cuda12x",
]
dev-cu13 = [
    "pygrog[dev-cpu,cuda]",
    "cupy-cuda13x",
]

# List URLs that are relevant to your project
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
[project.urls]  # Optional
"Homepage" = "https://github.com/FiRMLAB-Pisa/pygrog"
"Bug Reports" = "https://github.com/FiRMLAB-Pisa/pygrog/issues"
"Source" = "https://github.com/FiRMLAB-Pisa/pygrog"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["src/pygrog"]

# Build options (pass via pip install -C cmake.define.<NAME>=ON):
#   cmake.define.PYGROG_NO_CUDA    — force CPU-only build (no nvcc required)
#   cmake.define.PYGROG_FORCE_CUDA — fail if no CUDA compiler is found

[tool.setuptools_scm]
write_to = "src/pygrog/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
fallback_version = "v99-dev"

# Formatting + linting using ruff.
[tool.ruff]
line-length = 88
fix = true
extend-exclude = ["__init__.py"]
exclude = ["docs/**"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# RUFF section
[tool.ruff.lint]
select = [
  "A", 
  "ARG", 
  "B", 
  "C4", 
  "COM", 
  "F", 
  "I", 
  "NPY", 
  "RUF", 
  "S", 
  "SIM", 
  "PIE", 
  "PTH", 
  "Q", 
  "W", 
  "YTT",
]
ignore = [
    "E501",  # line too long
    "W191",  # tabs
    "E203",  # spacing before ':'
    "COM812", # missing trailing comma
    "Q000", "Q001", "Q002",  # quote rules handled by Ruff formatter
    "I001", "I002",          # import sorting intentionally not enforced
    "S101",
]
extend-ignore = [
    "E501",  # line too long
    "W191",  # tabs
    "E203",  # colon spacing
]

[tool.ruff.lint.isort]
force-single-line = false
split-on-trailing-comma = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath  = ["tests"]
testpaths=["tests"]
addopts = [
    "--import-mode=importlib",
    "--cov=pygrog",
    "--cov-report=term-missing",
    "--cov-report=xml"
]

[tool.pylsp-mypy]
enabled = false
live_mode = false

[tool.mypy]
ignore_missing_imports = true